Address Novi's feedback

--- a/ch/1-introduction.tex
+++ b/ch/1-introduction.tex
@@ -37,6 +37,7 @@ Ideally, the model itself would tell us about decisions it is uncertain about.
 
 Moreover, two of the three methods presented in this thesis require access to (unlabelled) \emph{unbiased} data,
 which is used during the training process.
+The remaining method requires summary statistics of the unbiased target dataset.
 So, the criticism that we are only learning from biased data does not apply here.
 This should allow us to be more confident in the predictions of those methods.
 
