--- a/FrontBackmatter/Titlepage.tex
+++ b/FrontBackmatter/Titlepage.tex
@@ -4,7 +4,8 @@
 \begin{titlepage}
     %\pdfbookmark[1]{\myTitle}{titlepage}
     % if you want the titlepage to be centered, uncomment and fine-tune the line below (KOMA classes environment)
-    \begin{addmargin}[-1cm]{-3cm}
+    % \begin{addmargin}[-1cm]{-3cm}
+    \begin{addmargin}[-2cm]{-2cm}
     \begin{center}
         \large
 
