Try to write acknowledgments

--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -19,4 +19,17 @@
 \chapter*{Acknowledgments}
 This thesis would not have been possible without...
 
+I would like to thank first and foremost my supervisor Novi.
+He has taught me a whole lot in the time I was his PhD student and always pushed me to challenge myself.
+
+I would like to thank my wife Chao who always supported me perfectly
+and encouraged me when I was feeling down.
+I would not have made it through the PhD without her.
+
+I would like to thank my office mates Oliver and Myles
+who were always there to talk about machine learning and other things as well.
+Working together with them was an absolute joy.
+
+Finally, I thank my family who have always believed in me.
+
 \endgroup
