Fix heading of acknowledgments

--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -1,7 +1,7 @@
 %*******************************************************
 % Acknowledgments
 %*******************************************************
-\pdfbookmark[1]{Acknowledgments}{acknowledgments}
+\pdfbookmark[1]{Acknowledgements}{acknowledgments}
 
 % \begin{flushright}{\slshape
 %     We have seen that computer programming is an art, \\
@@ -16,9 +16,7 @@
 \let\clearpage\relax
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
-\chapter*{Acknowledgments}
-This thesis would not have been possible without...
-
+\chapter*{Acknowledgements}
 I would like to thank first and foremost my supervisor Novi.
 He has taught me a whole lot in the time I was his PhD student and always pushed me to challenge myself.
 
