Address most of Novi's feedback

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -129,6 +129,7 @@
   \pdfbookmark[1]{Glossary}{glossary}
   \markboth{\spacedlowsmallcaps{Glossary}}{\spacedlowsmallcaps{Glossary}}
   \begin{glossaryenv}
+    \entry{Adult/Census Income}{A popular fairness dataset based on census data from the U.S.}
     \entry{CelebA}{Face attributes dataset with more than 200K celebrity images}
     \entry{MNIST}{Dataset of handwritten digits}
     \entry{demographic group}{Set induced by the sensitive attribute}
