--- a/allreferences.bib
+++ b/allreferences.bib
@@ -1539,12 +1539,15 @@ year={2020}
   year		= {2017}
 }
 
-@Article{	  pearl2018theoretical,
-  title		= {Theoretical impediments to machine learning with seven
-		  sparks from the causal revolution},
-  author	= {Pearl, Judea},
-  journal	= {arXiv preprint arXiv:1801.04016},
-  year		= {2018}
+@article{pearl2019seven,
+  title={The seven tools of causal inference, with reflections on machine learning},
+  author={Pearl, Judea},
+  journal={Communications of the ACM},
+  volume={62},
+  number={3},
+  pages={54--60},
+  year={2019},
+  publisher={ACM New York, NY, USA}
 }
 
 @Article{	  pedregosa2011scikit,
@@ -2175,4 +2178,52 @@ year={2021}
   booktitle={Proceedings of the 2019 AAAI/ACM Conference on AI, Ethics, and Society},
   pages={247--254},
   year={2019}
+}
+
+@Misc{ heritagehealth,
+author={ForeverData.org},
+title={Heritage Health Prize Contest Data},
+year={2015},
+URL={https://foreverdata.org/1015/index.html}
+}
+
+@article{wightman1998lsac,
+  title={LSAC National Longitudinal Bar Passage Study},
+  series= {LSAC Research Report Series},
+  author={Wightman, Linda F},
+  year={1998},
+  publisher={ERIC}
+}
+
+@article{bickel1975sex,
+  title={Sex bias in graduate admissions: Data from Berkeley},
+  author={Bickel, Peter J and Hammel, Eugene A and O'Connell, J William},
+  journal={Science},
+  volume={187},
+  number={4175},
+  pages={398--404},
+  year={1975},
+  publisher={American Association for the Advancement of Science}
+}
+
+@Misc{lecun1994mnist,
+title={The MNIST database of handwritten digits},
+author={Yann LeCun and Corinna Cortes and Christopher J. C. Burges},
+year={1994},
+URL={http://yann.lecun.com/exdb/mnist/}
+}
+
+@book{kaplan2008structural,
+  title={Structural equation modeling: Foundations and extensions},
+  author={Kaplan, David},
+  volume={10},
+  year={2008},
+  publisher={Sage Publications}
+}
+
+@book{pearl2009causality,
+  title={Causality},
+  author={Pearl, Judea},
+  year={2009},
+  publisher={Cambridge university press}
 }
